# Recomendador_juegos_steam

./: .gitignore  README.md  app.py  fases_proyecto.md  pyproject.toml  requirements.txt
notebooks/: 01_eda_y_limpieza.ipynb  02_modelo_recomendacion.ipynb
reports/: reporte_steam.html
src/models/: recomendador.py  train_model.py
src/steam_analisis/: __init__.py  iniciar_dataframe.py  reporte.py
